archive_20260226/merged/archive_20260224/important files/V291/include/DoPEsetup.H

typedef struct                         
{                                      
  WORD   Connector;                    
  WORD   Sign;                         
  WORD   CtrlChannel;                  
  WORD   LimitCtrl;                    
  WORD   ConnectedCtrl;                
  WORD   UseEeprom;                    
  double Integr;                       
  WORD   Init;                         
  double NominalValue;                 
  WORD   Unit;                         
  double Offset;                       
  double UpperLimit;                   
  double LowerLimit;                   
  double Scale;                        
  double Correction;                   
} DoPESenDef;
typedef struct                         
{                                      
  double Acceleration;                 
  double Speed;                        
  double UnUsed1;                      
  double UnUsed2;                      
  double Deviation;                    
  WORD   DevReaction;                  
  DWORD  PosP;                         
  WORD   PosI;                         
  WORD   PosD;                         
  DWORD  PosFFP;                       
  DWORD  SpeedP;                       
  WORD   SpeedI;                       
  WORD   SpeedD;                       
  DWORD  UnUsed3;                      
  DWORD  UnUsed4;                      
  double Integr;                       
  WORD   SpeedFFP;                     
  WORD   PosDelay;                     
  WORD   AccFFP;                       
  WORD   SpeedDelay;                   
} DoPECtrlSenDef;
typedef struct                         
{                                      
  WORD   Mode;                         
  WORD   SensorNo;                     
  double SensorPoint[MC2OUT_MAX];      
  double OutputPoint[MC2OUT_MAX];      
} DoPEMc2OutputDef;
typedef struct                         
{                                      
  WORD   Connector;                    
  WORD   Sign;                         
  double MaxValue;                     
  double MinValue;                     
  double InitValue;                    
  double PaVoltage;                    
  double PaCurrent;                    
  double MaxCurrTime;                  
  double DitherFrequency;              
  double DitherAmplitude;              
  WORD   CurrentControllerGain;        
  WORD   Signal;                       
  WORD   SignalFrequency;              
  WORD   UnUsed1;                      
  WORD   UnUsed2;                      
  double Offset;                       
  DWORD  CurrentP;                     
  WORD   CurrentI;                     
  WORD   CurrentD;                     
  DoPEMc2OutputDef Mc2Output;          
} DoPEOutChaDef;
typedef struct                         
{                                      
  WORD Connector;                      
  WORD InitValue;                      
} DoPEBitOutDef;
typedef struct                         
{                                      
  WORD Connector;                      
  WORD StopMask;                       
  WORD StopLevel;                      
} DoPEBitInDef;
typedef struct                         
{                                      
  double SpeedCtrlTime;                
  double PosCtrlTime;                  
  WORD   CtrlStructure;                
  double DataTransmissionRate;         
  WORD   Mode;                         
  WORD   UnUsed3;                      
  WORD   XheadDir;                     
  double UnUsed4;                      
  double EncXheadRatio;                
  double BrakeOpen;                    
  double BrakeClose;                   
  double PistonArea;                   
  double LoadMax;                      
  double Load100;                      
  double Stiffness;                    
  short  UnUsed1;                      
  short  UnUsed2;                      
  WORD   GripConnector;                
  WORD   GripChannel;                  
  WORD   GripActive;                   
  WORD   ShieldConnector;              
  WORD   ShieldType;                   
  double ShieldTimeout;                
  WORD   CtrlOnMode;                   
  double FixValue;                     
  double InitValue;                    
  double ReturnValue;                  
  double ShieldUprLock;                
  double ShieldLwrLock;                
  double ShieldSpeedLimit;             
  WORD   LimitSwitchType;              
  WORD   XheadInitialMode;             
  double XheadInitialValue;            
  WORD   X4Pin14Mode;                  
} DoPEMachineDef;
typedef struct                         
{                                      
  WORD     LinNo;                      
  double   FalseValue[LIN_DATA_MAX];   
} DoPELinTblFalse;
typedef struct                         
{                                      
  WORD     LinNo;                      
  double   TrueValue[LIN_DATA_MAX];    
} DoPELinTblTrue;
typedef struct                         
{                                      
  WORD      Mode;                      
  WORD      BitDevice;                 
  WORD      BitNo;                      
  WORD      LimitSensorNo;             
  double    LimitMax;                  
  double    LimitMin;                  
  WORD      FConstEnabled;             
  double    CloseSecurityTime;         
  double    OutGripHydraulicOnTime;    
  double    OutGripHighPressureTime;   
  double    InGripOpenedTime;          
  double    InGripClosedTime;          
  WORD      PressureOutputEnabled;     
  WORD      OutChaNo;                  
  double    UnUsed1;                   
  double    OutChaLowPressure;         
  double    OutChaHighPressure;        
  double    OutChaRampTime;            
  WORD      OutChaFCtrlEnabled;        
  double    OutChaFCtrlHighPressure;   
} DoPEIOGrip;
typedef struct                         
{                                      
  WORD      Mode;                      
  WORD      BitDevice;                 
  WORD      BitNo;                      
  double    IOTime;                    
} DoPEIOExt;
typedef struct                         
{                                      
  WORD      Mode;                      
  WORD      BitDevice;                 
  WORD      BitNo;                      
  double    IOTime;                    
} DoPEIOFixedXHead;
typedef struct                         
{                                      
  WORD      Mode;                      
  WORD      BitDevice;                 
  WORD      BitNo;                      
  double    IOTime;                    
  WORD      PressureOutputEnabled;     
  WORD      OutChaNo;                  
  double    OutChaLowPressure;         
  double    OutChaHighPressure;        
  double    OutChaRampTime;            
} DoPEIOHighPressure;
typedef struct                         
{                                      
  WORD      BitInMode;                 
  WORD      BitInDevice;               
  WORD      BitInNo;                    
  WORD      BitOutMode;                
  WORD      BitOutDevice;              
  WORD      BitOutNo;                   
} DoPEIOMisc;
typedef struct                         
{                                      
  WORD Mode;                           
  WORD BitDevice;                      
  WORD BitNo;                           
} DoPEIOSHalt;
typedef struct                         
{                                      
  DoPEIOGrip         Grip;             
  DoPEIOExt          Ext;              
  DoPEIOFixedXHead   FixedXHead;       
  DoPEIOHighPressure HighPressure;     
  BYTE               Reserved[28];     
  DoPEIOMisc         Misc;             
  DoPEIOSHalt        SHalt;            
} DoPEIOSignals;
typedef struct                         
{                                      
  long TestNo;                         
  WORD Visible;                        
} DoPEMainMenu;
typedef struct                         
{                                      
  WORD         PushMode;               
  DoPERmcDPoti RmcDPoti[MAX_CTRL];     
  DoPERmcIOKey RmcIOKey[RMCIO_KEY_MAX];
} DoPERmcDef;
typedef struct                         
{                                      
  DoPESenDef      SDef[MAX_MC];        
  DoPECtrlSenDef  CSDef[MAX_CTRL];     
  DoPECtrlSenDef  CSDefHigh[MAX_CTRL];  
  DoPEOutChaDef   ODef[MAX_OC];        
  DoPEBitOutDef   BODef[MAX_BOUT];     
  DoPEBitInDef    BIDef[MAX_BIN];      
  DoPEMachineDef  MDef;                
  DoPELinTblFalse LinTblFalse;         
  DoPELinTblTrue  LinTblTrue;          
  DoPEIOSignals   IOSignals;            
  DoPEMainMenu    MainMenu[MAX_MAIN_MENU];  
  DoPERmcDef      RmcDef;               
} DoPESetup;