archive_20260224/important files/V291/include/DoPEdata.H

  typedef  struct                      
    {                                  
      unsigned long  Cycles;           
      double         Time;             
      double         Position;         
      double         Load;             
      double         Extension;        
      double         Sensor3;          
      double         Sensor4;          
      double         Sensor5;          
      double         Sensor6;          
      double         Sensor7;          
      double         Sensor8;          
      double         Sensor9;          
      double         Sensor10;         
      double         Sensor11;         
      double         Sensor12;         
      double         Sensor13;         
      double         Sensor14;         
      double         Sensor15;         
      unsigned short BitIn0;           
      unsigned short BitIn1;           
      unsigned short BitIn2;           
      unsigned short BitIn3;           
      unsigned short BitIn4;           
      unsigned short BitIn5;           
      unsigned short BitIn6;           
      unsigned short BitIn7;           
      unsigned short BitIn8;           
      unsigned short BitIn9;           
      unsigned short BitOut0;          
      unsigned short BitOut1;          
      unsigned short BitOut2;          
      unsigned short BitOut3;          
      unsigned short BitOut4;          
      unsigned short BitOut5;          
      unsigned short BitOut6;          
      unsigned short BitOut7;          
      unsigned short BitOut8;          
      unsigned short BitOut9;          
      unsigned short InSignals;        
      unsigned short OutSignals;       
      unsigned short CtrlState1;       
      unsigned short CtrlState2;       
      unsigned short UpperLimits;      
      unsigned short LowerLimits;      
      unsigned short SysState0;        
      unsigned short ActiveCtrl;       
      unsigned short UpperSft;         
      unsigned short LowerSft;         
      unsigned short SensorConnected;  
      unsigned short SensorKeyPressed; 
      double Test1;                    
      double Test2;                    
      double Test3;                    
      unsigned short Keys;             
      unsigned short NewKeys;          
      unsigned short GoneKeys;         
    } DoPEData;
  extern  unsigned  DLLAPI  DoPESetTime  ( DoPE_HANDLE DoPEHdl,
                                           WORD        Mode,
                                           double      Time,
                                           WORD       *lpusTAN );
  extern  unsigned  DLLAPI  DoPEGetData ( DoPE_HANDLE   DoPEHdl,
                                          DoPEData     *Sample  );