archive_20260224/important files/V291/include/DoPEmove.H

                                    
  #define MOVE_HALT          0      
  #define MOVE_UP            1      
  #define MOVE_DOWN          2      
  extern  unsigned  DLLAPI  DoPEFMove ( DoPE_HANDLE    DoPEHdl,
                                        unsigned short Direction,
                                        unsigned short MoveCtrl,
                                        double         Speed,
                                        WORD          *lpusTAN );
  extern  unsigned  DLLAPI  DoPEPos ( DoPE_HANDLE    DoPEHdl,
                                      unsigned short MoveCtrl,
                                      double         Speed,
                                      double         Destination,
                                      WORD          *lpusTAN );